p2/confs/test/hello-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app1

spec:
  rules:
    - host: app1.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 8913
