p2/confs/test/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1

spec:
  type: ClusterIP
  ports:
    - port: 8913
      targetPort: 80
      protocol: TCP
  selector:
      app: "app1"
